--- a/.github/workflows/report-maker.yml
+++ b/.github/workflows/report-maker.yml
@@ -28,13 +28,13 @@ jobs:
       id: setup1
       run: |
         if ${{ contains(inputs.check_type, 'spelling') }} ;then
-          echo "error_name=spelling error" >> $GITHUB_OUTPUT
+          echo "error_name=spelling errors" >> $GITHUB_OUTPUT
           echo "ignore_file=resources/dictionary.txt" >> $GITHUB_OUTPUT
         elif ${{ contains(inputs.check_type, 'urls') }} ;then
-          echo "error_name=broken url error" >> $GITHUB_OUTPUT
+          echo "error_name=broken url errors" >> $GITHUB_OUTPUT
           echo "ignore_file=resources/ignore-urls.txt" >> $GITHUB_OUTPUT
         elif ${{ contains(inputs.check_type, 'quiz_format') }} ;then
-          echo "error_name=quiz formatting error" >> $GITHUB_OUTPUT
+          echo "error_name=quiz formatting errors" >> $GITHUB_OUTPUT
         fi
 
     - name: Build components of the spell check comment
@@ -72,13 +72,13 @@ jobs:
       id: setup2
       run: |
         if ${{ contains(inputs.check_type, 'spelling') }} ;then
-          echo "error_name=spelling error" >> $GITHUB_OUTPUT
+          echo "error_name=spelling errors" >> $GITHUB_OUTPUT
           echo "ignore_file=resources/dictionary.txt" >> $GITHUB_OUTPUT
         elif ${{ contains(inputs.check_type, 'urls') }} ;then
-          echo "error_name=broken url error" >> $GITHUB_OUTPUT
+          echo "error_name=broken url errors" >> $GITHUB_OUTPUT
           echo "ignore_file=resources/ignore-urls.txt" >> $GITHUB_OUTPUT
         elif ${{ contains(inputs.check_type, 'quiz_format') }} ;then
-          echo "error_name=quiz formatting error" >> $GITHUB_OUTPUT
+          echo "error_name=quiz formatting errors" >> $GITHUB_OUTPUT
         fi
 
     - name: Build components of the spell check comment
@@ -166,8 +166,8 @@ jobs:
         issue-number: ${{ github.event.pull_request.number }}
         body: |
           :warning: ${{ steps.setup2.outputs.error_name }} :warning:
-          There are ${{ steps.setup2.outputs.error_name }}s that need to be addressed.
-          Click here :arrow_right: [for ${{ steps.setup2.outputs.error_name }}s!](${{ steps.file-path.outputs.error_url }}) :exclamation:
+          There are ${{ steps.setup2.outputs.error_name }} that need to be addressed.
+          Click here :arrow_right: [for ${{ steps.setup2.outputs.error_name }}!](${{ steps.file-path.outputs.error_url }}) :exclamation:
           Add errors that aren't errors to the [${{ steps.setup2.outputs.ignore_file }}](${{ steps.file-path.outputs.link_to_ignore_file }}) file of this repo.
           If you are having troubles see [this guide](https://www.ottrproject.org/faqs.html#Most_Common_Errors)
           _Comment updated at ${{ steps.build-components2.outputs.time }} with changes from ${{ steps.build-components2.outputs.commit_id }}_
@@ -193,6 +193,6 @@ jobs:
         comment-id: ${{ steps.fc2.outputs.comment-id }}
         issue-number: ${{ github.event.pull_request.number }}
         body: |
-          No ${{ steps.setup.outputs.error_name }}s! :tada:
+          No ${{ steps.setup.outputs.error_name }}! :tada:
           _Comment updated at ${{ steps.build-components2.outputs.time }} with changes from ${{ steps.build-components2.outputs.commit_id }}_
         edit-mode: replace
