--- a/action.yml
+++ b/action.yml
@@ -34,7 +34,7 @@ runs:
   using: "composite"
   steps:
     - name: Declare report name
-      id: setup1
+      id: setup
       run: |
         if ${{ contains(inputs.check_type, 'spelling') }} ;then
           echo "error_name=spelling errors" >> $GITHUB_OUTPUT
@@ -45,10 +45,12 @@ runs:
         elif ${{ contains(inputs.check_type, 'quiz_format') }} ;then
           echo "error_name=quiz formatting errors" >> $GITHUB_OUTPUT
         fi
+      shell: bash
 
     - name: Build components of the spell check comment
-      id: build-components1
+      id: build-components
       run: |
+        branch_name='preview-${{ github.event.pull_request.number }}'
         echo "time=$(date +'%Y-%m-%d-%T')" >> $GITHUB_OUTPUT
         echo "commit_id=$GITHUB_SHA" >> $GITHUB_OUTPUT
       shell: bash
@@ -59,7 +61,7 @@ runs:
       with:
         issue-number: ${{ github.event.pull_request.number }}
         comment-author: 'github-actions[bot]'
-        body-includes: ${{ steps.setup1.outputs.error_name }}
+        body-includes: ${{ steps.setup.outputs.error_name }}
 
     - name: Status update
       uses: peter-evans/create-or-update-comment@v4
@@ -67,36 +69,9 @@ runs:
         comment-id: ${{ steps.fc1.outputs.comment-id }}
         issue-number: ${{ github.event.pull_request.number }}
         body: |
-          The ${{ steps.setup1.outputs.error_name }} check is currently being re-run :runner:
-          _Comment updated at ${{ steps.build-components1.outputs.time }} with changes from ${{ steps.build-components1.outputs.commit_id }}_
+          The ${{ steps.setup.outputs.error_name }} check is currently being re-run :runner:
+          _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
         edit-mode: replace
-
-  error-check:
-    runs-on: ubuntu-latest
-    container:
-      image: jhudsl/base_ottr:main
-
-    steps:
-    - name: Declare report name
-      id: setup2
-      run: |
-        if ${{ contains(inputs.check_type, 'spelling') }} ;then
-          echo "error_name=spelling errors" >> $GITHUB_OUTPUT
-          echo "ignore_file=resources/dictionary.txt" >> $GITHUB_OUTPUT
-        elif ${{ contains(inputs.check_type, 'urls') }} ;then
-          echo "error_name=broken url errors" >> $GITHUB_OUTPUT
-          echo "ignore_file=resources/ignore-urls.txt" >> $GITHUB_OUTPUT
-        elif ${{ contains(inputs.check_type, 'quiz_format') }} ;then
-          echo "error_name=quiz formatting errors" >> $GITHUB_OUTPUT
-        fi
-
-    - name: Build components of the spell check comment
-      id: build-components2
-      run: |
-        branch_name='preview-${{ github.event.pull_request.number }}'
-        echo "time=$(date +'%Y-%m-%d-%T')" >> $GITHUB_OUTPUT
-        echo "commit_id=$GITHUB_SHA" >> $GITHUB_OUTPUT
-      shell: bash
 
     - name: Checkout
       uses: actions/checkout@v3
@@ -138,7 +113,7 @@ runs:
         body: |
           :warning: Check: ${{ steps.setup2.outputs.error_name }} did not fully run! Go to the `Actions` tab to find more info.
           Post issue to https://github.com/jhudsl/OTTR_Template/issues if this seems incorrect.
-          _Comment updated at ${{ steps.build-components2.outputs.time }} with changes from ${{ steps.build-components2.outputs.commit_id }}_
+          _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
         edit-mode: replace
 
     - name: Stop if failure
@@ -179,7 +154,7 @@ runs:
           Click here :arrow_right: [for ${{ steps.setup2.outputs.error_name }}!](${{ steps.file-path.outputs.error_url }}) :exclamation:
           Add errors that aren't errors to the [${{ steps.setup2.outputs.ignore_file }}](${{ steps.file-path.outputs.link_to_ignore_file }}) file of this repo.
           If you are having troubles see [this guide](https://www.ottrproject.org/faqs.html#Most_Common_Errors)
-          _Comment updated at ${{ steps.build-components2.outputs.time }} with changes from ${{ steps.build-components2.outputs.commit_id }}_
+          _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
         edit-mode: replace
 
     - name: Fail if too many errors
@@ -203,7 +178,7 @@ runs:
         issue-number: ${{ github.event.pull_request.number }}
         body: |
           No ${{ steps.setup2.outputs.error_name }}! :tada:
-          _Comment updated at ${{ steps.build-components2.outputs.time }} with changes from ${{ steps.build-components2.outputs.commit_id }}_
+          _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
         edit-mode: replace
 
 branding:
