--- a/action.yml
+++ b/action.yml
@@ -119,7 +119,7 @@ runs:
     - name: Stop if failure
       if: steps.check_results.outcome == 'failure'
       run: exit 1
-
+      shell: bash
 ############################# Handle commenting ################################
 
     - name: Commit check files to branch
