--- a/action.yml
+++ b/action.yml
@@ -77,6 +77,7 @@ runs:
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
+        token: ${{secrets.gh_pat}}
 
     # Make the branch fresh
     - name: Make the branch fresh
