--- a/action.yml
+++ b/action.yml
@@ -77,7 +77,7 @@ runs:
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
-        token: ${{ inputs.GH_PAT }}
+        token: ${{ inputs.gh_pat }}
 
     # Make the branch fresh
     - name: Make the branch fresh
