--- a/action.yml
+++ b/action.yml
@@ -18,8 +18,7 @@ inputs:
   branch_name:
     type: string
     default: ${GITHUB_REF#refs/heads/}
-  gh_pat:
-    default: ${{ secrets.GH_PAT }}
+  token:
     required: true
 
 outputs:
@@ -77,7 +76,7 @@ runs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
-        token: ${{ inputs.gh_pat }}
+        token: ${{ inputs.token }}
 
     # Make the branch fresh
     - name: Make the branch fresh
