inputs not input

--- a/action.yml
+++ b/action.yml
@@ -94,15 +94,15 @@ runs:
     - name: Run the check
       id: check_results
       run: |
-        docker run -v $PWD:/home -d jhudsl/ottrpal:dev "spelling" "/home"
+        docker run -v $PWD:/home -d jhudsl/ottrpal:dev ${{ inputs.check_type }} "/home"
 
-        if [ ${{ input.check_type }} == "spelling" ];then
+        if [ ${{ inputs.check_type }} == "spelling" ];then
           error_name='spelling errors'
           report_path=check_reports/spell_check_results.tsv
-        elif [ ${{ input.check_type }} == "urls" ];then
+        elif [ ${{ inputs.check_type }} == "urls" ];then
           error_name='broken URLs'
           report_path=check_reports/url_checks.tsv
-        elif [ ${{ input.check_type }} == "quiz_format" ];then
+        elif [ ${{ inputs.check_type }} == "quiz_format" ];then
           error_name='quiz format errors'
           report_path=check_reports/question_error_report.tsv
         fi
