--- a/action.yml
+++ b/action.yml
@@ -75,19 +75,6 @@ runs:
         fetch-depth: 0
         token: ${{ inputs.token }}
 
-      # Set up git checkout
-    - name: Set up git checkout
-      run: |
-        git config --global --add safe.directory $GITHUB_WORKSPACE
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-
-        branch_name='preview-${{ github.event.pull_request.number }}'
-        git fetch --all
-        git checkout $branch_name
-        git merge -s recursive --strategy-option=theirs origin/${{ github.head_ref }} --allow-unrelated-histories
-      shell: bash
-
     - name: Run the check
       id: check_results
       run: |
@@ -108,98 +95,15 @@ runs:
         echo "error_name=$error_name" >> $GITHUB_OUTPUT
         echo "report_path=$report_path" >> $GITHUB_OUTPUT
         echo "chk_results=$chk_results" >> $GITHUB_OUTPUT
-
-        git status
       shell: bash
 
-    - name: Declare file path and time
-      id: file-path
-      run: |
-        branch_name='preview-${{ github.event.pull_request.number }}'
-        echo "link_to_ignore_file=https://github.com/${GITHUB_REPOSITORY}/edit/${{ inputs.branch_name }}/${{ steps.setup.outputs.ignore_file }}" >> $GITHUB_OUTPUT
-        echo "time=$(date +'%Y-%m-%d-%T')" >> $GITHUB_OUTPUT
-        echo "error_url=https://github.com/${GITHUB_REPOSITORY}/blob/$branch_name/${{ steps.check_results.outputs.report_path }}" >> $GITHUB_OUTPUT
-      shell: bash
-
-    - name: Find Comment Again
-      uses: peter-evans/find-comment@v3
-      id: fc2
+    - name: Upload Artifact
+      id: upload
+      uses: actions/upload-artifact@v3.1.2
       with:
-        issue-number: ${{ github.event.pull_request.number }}
-        comment-author: 'github-actions[bot]'
-        body-includes: ${{ steps.setup2.outputs.error_name }}
-
-    - name: Say check is incomplete
-      if: steps.check_results.outcome == 'failure'
-      uses: peter-evans/create-or-update-comment@v4
-      with:
-        comment-id: ${{ steps.fc2.outputs.comment-id }}
-        issue-number: ${{ github.event.pull_request.number }}
-        body: |
-          :warning: Check: ${{ steps.setup2.outputs.error_name }} did not fully run! Go to the `Actions` tab to find more info.
-          Post issue to https://github.com/jhudsl/OTTR_Template/issues if this seems incorrect.
-          _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
-        edit-mode: replace
-
-    - name: Stop if failure
-      if: steps.check_results.outcome == 'failure'
-      run: exit 1
-      shell: bash
-############################# Handle commenting ################################
-
-    - name: Commit check files to branch
-      id: commit
-      run: |
-        branch_name='preview-${{ github.event.pull_request.number }}'
-
-        git add ${{ steps.check_results.outputs.report_path }} --force || echo "No changes to commit"
-        git commit -m 'Check file' || echo "No changes to commit"
-        git pull --rebase --set-upstream origin $branch_name --allow-unrelated-histories --strategy-option=ours
-        git push --force || echo "No changes to commit"
-
-        error_num=$(cat ${{ steps.check_results.outputs.report_path }} | wc -l)
-        error_num="$((error_num-1))"
-        echo "error_num=$error_num" >> $GITHUB_OUTPUT
-      shell: bash
-
-    - name: There are errors!
-      if: ${{ steps.commit.outputs.error_num > inputs.error_min }}
-      uses: peter-evans/create-or-update-comment@v4
-      with:
-        comment-id: ${{ steps.fc2.outputs.comment-id }}
-        issue-number: ${{ github.event.pull_request.number }}
-        body: |
-          :warning: ${{ steps.setup2.outputs.error_name }} :warning:
-          There are ${{ steps.setup2.outputs.error_name }} that need to be addressed.
-          Click here :arrow_right: [for ${{ steps.setup2.outputs.error_name }}!](${{ steps.file-path.outputs.error_url }}) :exclamation:
-          Add errors that aren't errors to the [${{ steps.setup2.outputs.ignore_file }}](${{ steps.file-path.outputs.link_to_ignore_file }}) file of this repo.
-          If you are having troubles see [this guide](https://www.ottrproject.org/faqs.html#Most_Common_Errors)
-          _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
-        edit-mode: replace
-
-    - name: Fail if too many errors
-      if: ${{ steps.commit.outputs.error_num > inputs.error_min }}
-      run: |
-        echo ${{ steps.commit.outputs.error_num }}
-        exit 1
-      shell: bash
-
-    - name: Don't fail if not too many errors
-      if: ${{ steps.commit.outputs.error_num <= inputs.error_min }}
-      run: |
-        echo ${{ steps.commit.outputs.error_num }}
-      shell: bash
-
-    - name: No errors comment
-      if: ${{ steps.commit.outputs.error_num <= inputs.error_min }}
-      uses: peter-evans/create-or-update-comment@v4
-      with:
-        comment-id: ${{ steps.fc2.outputs.comment-id }}
-        issue-number: ${{ github.event.pull_request.number }}
-        body: |
-          No ${{ steps.setup2.outputs.error_name }}! :tada:
-          _Comment updated at ${{ steps.build-components.outputs.time }} with changes from ${{ steps.build-components.outputs.commit_id }}_
-        edit-mode: replace
+        name: ${{ steps.check_results.outputs.error_name }}
+        path: ${{ steps.check_results.outputs.report_path }}
+        if-no-files-found: error
 
 branding:
   icon: "briefcase"
