--- a/action.yml
+++ b/action.yml
@@ -95,6 +95,11 @@ runs:
         echo "error_name=$error_name" >> $GITHUB_OUTPUT
         echo "report_path=$report_path" >> $GITHUB_OUTPUT
         echo "chk_results=$chk_results" >> $GITHUB_OUTPUT
+
+        chown -R runner:runner $report_path
+
+        ls ./check_reports
+        ls
       shell: bash
 
     - name: Upload Artifact
