--- a/action.yml
+++ b/action.yml
@@ -78,7 +78,7 @@ runs:
     - name: Run the check
       id: check_results
       run: |
-        chk_results=$(docker run -v $PWD:/home -d jhudsl/ottrpal:dev ${{ inputs.check_type }} "/home")
+        docker run -v $PWD:/home -d jhudsl/ottrpal:dev ${{ inputs.check_type }} "/home"
 
         if [ ${{ inputs.check_type }} == "spelling" ];then
           error_name='spelling errors'
@@ -97,7 +97,6 @@ runs:
         echo "chk_results=$chk_results" >> $GITHUB_OUTPUT
 
         ls
-        ls check_reports
       shell: bash
 
     - name: Upload Artifact
