--- a/action.yml
+++ b/action.yml
@@ -26,7 +26,7 @@ outputs:
 
 runs:
   using: 'docker'
-  image: 'docker://jhudsl/ottr-reports'
+  image: 'docker://ottrproject/ottr-reports'
   args:
     - ${{ inputs.check_type }}
     - ${{ inputs.error_min }}
