--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,5 +24,5 @@ jobs:
         url_error_min: 1
         check_quiz_form: TRUE
         quiz_error_min: 1
-        branch_name: ${GITHUB_HEAD_REF}
+        branch_name: ${{ GITHUB_HEAD_REF }}
         sort_dictionary: true
