--- a/action.yml
+++ b/action.yml
@@ -31,7 +31,6 @@ inputs:
     description: "Should this action automatically alphabetize your dictionary.txt"
     default: false
     type: boolean
-secrets:
   gh_pat:
     required: true
 
@@ -70,6 +69,7 @@ runs:
         issue-number: ${{ github.event.pull_request.number }}
         comment-author: 'github-actions[bot]'
         body-includes: "OTTR Check Results"
+        token: ${{ inputs.gh_pat }}
 
     # Post initial status
     - name: Post initial status
@@ -84,7 +84,7 @@ runs:
 
           _Last Updated: ${{ steps.build-components.outputs.time }}_
         edit-mode: replace
-        token: ${{ secrets.gh_pat }}
+        token: ${{ inputs.gh_pat }}
 
     # Spelling Check
     - name: Run spelling check
@@ -231,7 +231,7 @@ runs:
 
           _Last Updated: ${{ steps.build-components.outputs.time }}_
         edit-mode: replace
-        token: ${{ secrets.gh_pat }}
+        token: ${{ inputs.gh_pat }}
 
     # Final exit if any checks failed
     - name: Check for failures
